--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Bryan G. Cabrera Ramirez
+title: Bryan G. Ramirez Cabrera
 logo: /assets/css/img/image3.png
 description: Aerospace Engineering, M.Sc.
 show-downloads: false
