--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bryan G. Ramirez Cabrera
 logo: /assets/css/img/image3.png
-description: Nobody ever figures out what life is all about, and it doesn't matter. Explore the world. Nearly everything is really interesting if you go into it deeply enough.
+description: Nobody ever figures out what life is all about, and it doesn't matter. Explore the world. Nearly everything is really interesting if you go into it deeply enough. ~ Richard Feynman
 show-downloads: false
 theme: jekyll-theme-minimal
